--- a/style.css
+++ b/style.css
@@ -1,29 +1,59 @@
-/* style.css */
+body {
+  margin: 0;
+  font-family: Arial, sans-serif;
+}
+
+header {
+  background-color: #333;
+  padding: 50px;
+}
+
+.logo {
+  float: left;
+  margin-right: 0px;
+}
+
+.logo img {
+  height: 100px;
+}
 
 nav {
-  background-color: #333; /* Add your desired background color */
-  padding: 10px;
+  text-align: center;
 }
 
-#header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-ul {
-  list-style: none;
+nav ul {
+  list-style-type: none;
   margin: 0;
   padding: 0;
-  display: flex;
+  display: inline-block;
 }
 
-li {
-  margin: 0 10px; /* Adjust the margin as needed */
+nav li {
+  display: inline;
+  margin-right: 20px;
+  padding: 5px;
 }
 
-a {
+nav a {
+  color: white;
   text-decoration: none;
-  color: white; /* Add your desired text color */
-  font-weight: bold;
+}
+
+nav a:hover {
+  color: #ddd;
+}
+
+#concert-grid{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    gap: 10px;
+}
+.concert-grid-item {
+    height: 300px;
+    width: 450px;
+}
+.concert-grid-item img{
+    width: 100%;
+    height: auto;
 }
